# cratesio-GetCode

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
crates_io/: Cargo.toml
crates_io/src/: cli.rs  config.rs  logging.rs  main.rs  pgdatahandle.rs
crates_io/src/commands/: build.rs  compile.rs  databatch.rs  download.rs  mod.rs
datahandle/: Cargo.toml  README.md
datahandle/data_import/: import.py
datahandle/migration/: Cargo.toml
datahandle/migration/src/: lib.rs  m20260425_000001_create_crates_table.rs  m20260425_000002_add_download_retry_fields.rs  m20260426_000003_add_version_handled_to_crates.rs  m20260426_000004_create_crate_versions_index_table.rs  m20260427_000005_add_compile_fields_to_crates.rs  m20260512_000006_add_heavy_deps_skip_fields_to_crates.rs  main.rs
datahandle/src/: lib.rs
datahandle/src/entities/: crate_versions_index.rs  crates.rs  mod.rs  prelude.rs
