[package]
name = "crates_io"
version = "0.1.0"
edition = "2024"

[dependencies]
datahandle = { path = "../datahandle" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1"
tar = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
sea-orm = { version = "1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
sea-orm-migration = { version = "1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
